--- a/AzureDevOpsStateTracker.Functions/AzureDevOpsStateTracker.Functions.csproj
+++ b/AzureDevOpsStateTracker.Functions/AzureDevOpsStateTracker.Functions.csproj
@@ -18,6 +18,9 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AzureDevopsStateTracker\AzureDevopsStateTracker.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="local.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
