--- a/AzureDevOpsStateTracker.Functions/AzureDevOpsStateTracker.Functions.csproj
+++ b/AzureDevOpsStateTracker.Functions/AzureDevOpsStateTracker.Functions.csproj
@@ -6,12 +6,10 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AzureDevOpsTracker" Version="1.0.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.18" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.19" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AzureDevopsStateTracker\AzureDevopsStateTracker.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="local.settings.json">
